fixed some styling for the post and messages for better visibility

--- a/public/style.css
+++ b/public/style.css
@@ -72,7 +72,7 @@ a {
 }
 
 .posts {
-  background-color: cornflowerblue;
+  background-color: rebeccapurple;
   margin: 1rem;
   padding: 1rem;
   border-radius: 15px;
@@ -87,7 +87,7 @@ a {
 }
 
 .messages {
-  background-color: palevioletred;
+  background-color: cornflowerblue;
   margin: 1rem;
   padding: 1rem;
   border-radius: 15px;
